--- a/testes-desafios/Livro de receitas/index.html
+++ b/testes-desafios/Livro de receitas/index.html
@@ -45,7 +45,7 @@
  </main>
 
 <h4>Como armazenar, congelar e descongelar?</h4>
-<div>  PASSE O MOUSE AQUI 
+<div>  <strong>PASSE O MOUSE AQUI</strong>
     <p>Utileze a seguir ou, se preferir, embale individualmente com filme e armazene na feladeira por <span>3 dias</span> ou no congelador por até <span>1 mês</span>. <br> Para descongelar, deixe em temperatura ambiente cerca de 2 horas antes de usar; se estiver na geladeira, deixe em temperatura ambiente por <span>30min</span> antes de usar.</p>
 </div> 
 
