--- a/exercicios/ex022/fundo005.html
+++ b/exercicios/ex022/fundo005.html
@@ -9,7 +9,7 @@
             height: 98vh;
             background-image: url(imagens/wallpaper003.jpg);
             background-repeat: no-repeat;
-            background-position: center bottom;
+            background-position: left top;
         }
     </style>
 </head>
