--- a/exercicios/ex023/tabelateste.html
+++ b/exercicios/ex023/tabelateste.html
@@ -16,11 +16,13 @@
         th{
             border: 1px solid black;
             padding: 8px;
-
+            vertical-align: top;
+            height: 30px;
         }
         td{
             border: 1px solid black;
             padding: 8px;
+            text-align: center;
         }
     </style>
 </head>
